--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.vscode/
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -12,4 +13,6 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+**/packages/
+**/patches/
