--- a/files/main.yml
+++ b/files/main.yml
@@ -8,28 +8,20 @@ vars:
 
 tasks:
 
-  - name: task1run1
-    shell: echo 1 >>/tmp/task1.txt
-    plugin:  
-      mod: parted
-      args: -d 1 -m 1
+  - name: task1-echo  1
+    shell: echo task1-echo >>/tmp/task.txt
   
   - name: task2
-    shell: echo 2 >>/tmp/task2.txt
+    shell: date >>/tmp/task.txt
 
-  - name: plugin1-parted{{ aa }}$3
+  - include: a.yml
+
+  - name: task-fail
+    shell: echo fail >>/tmp/task.txt
     plugin:  
       mod: parted
       args: -d 1 -m 1
+      
+  - name: task3-echo 
+    shell: echo task3-neverrun >>/tmp/task.txt
   
-  - include: ../files/a.yml
-
-  - name: b-include2
-    include: ../files/b.yml
-
-  - name: Create a volume group on top of /dev/sdb4
-    plugin:
-      vg: vg1
-      pvs: /dev/sdb1
-
-unkonwtag: unknow
