--- a/files/main.yml
+++ b/files/main.yml
@@ -11,7 +11,14 @@ tasks:
   - name: task1-echo  1
     shell: echo task1-echo >>/tmp/task.txt
   
-  - name: task2
+  - name: task2.1
+    shell: date >>/tmp/task.txt
+
+  - name: task2.2
+    plugin:
+      mod: synctime
+
+  - name: task2.3
     shell: date >>/tmp/task.txt
 
   - include: a.yml
